Add api: transfer from contract to did [WIP:Breaking]
